--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+canvas {
+  width: 500px;
+  height: 500px;
+}
+
 #canvas {
   position: absolute;
   top: 100px;
@@ -35,3 +40,8 @@
   background-color: #208040;
 }
 
+#restart-btn {
+  position: absolute;
+  top: 0;
+  left: 20px;
+}
